--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,23 @@ env:
   - SCHEME=RxSSDP
   matrix:
     - DESTINATION="platform=iOS Simulator,name=iPhone XS"
-script:
-  - ./Pods/SwiftLint/swiftlint
-  - set -o pipefail
-  - xcodebuild -version
-  - xcodebuild -showsdks
-  - xcodebuild clean -workspace "$WORKSPACE" -scheme "$SCHEME" | xcpretty
-  - xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" | xcpretty
-deploy:
-  provider: script
-  script: ./scripts/push.sh
-  on:
-    tags: true
+
+jobs:
+  include:
+    - stage: lint
+      script:
+        - ./Pods/SwiftLint/swiftlint
+
+    - stage: test
+      script:
+        - set -o pipefail
+        - xcodebuild -version
+        - xcodebuild -showsdks
+        - xcodebuild clean -workspace "$WORKSPACE" -scheme "$SCHEME" | xcpretty
+        - xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" | xcpretty
+
+    - stage: deploy
+      script:
+        - pod trunk push
+      on:
+        tags: true
