--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,17 @@ env:
   matrix:
     - DESTINATION="platform=iOS Simulator,name=iPhone XS"
 
-stages:
-  - name: lint
-    script:
-      - ./Pods/SwiftLint/swiftlint
-
-  - name: test
-    script:
-      - set -o pipefail
-      - xcodebuild -version
-      - xcodebuild -showsdks
-      - xcodebuild clean -workspace "$WORKSPACE" -scheme "$SCHEME" | xcpretty
-      - xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" | xcpretty
-
-  - name: deploy
-    if: branch = master
-    script:
-      - pod trunk push
+jobs:
+  include:
+    - stage: test
+      script:
+        - ./Pods/SwiftLint/swiftlint
+        - set -o pipefail
+        - xcodebuild -version
+        - xcodebuild -showsdks
+        - xcodebuild clean -workspace "$WORKSPACE" -scheme "$SCHEME" | xcpretty
+        - xcodebuild test -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" | xcpretty
+    - stage: deploy
+      if: branch = master
+      script:
+        - pod trunk push
