--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ osx_image: xcode10.2
 cache: cocoapods
 env:
   global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
-  - WORKSPACE=RxSSDP.xcworkspace
-  - SCHEME=RxSSDP
+    - LC_CTYPE=en_US.UTF-8
+    - LANG=en_US.UTF-8
+    - WORKSPACE=RxSSDP.xcworkspace
+    - SCHEME=RxSSDP
+    - EXPANDED_CODE_SIGN_IDENTITY=""
+    - EXPANDED_CODE_SIGN_IDENTITY_NAME=""
+    - EXPANDED_PROVISIONING_PROFILE=""
   matrix:
     - DESTINATION="platform=iOS Simulator,name=iPhone XS"
 
